# 42_lem-in

./: CMakeLists.txt  Makefile  README.md  big.uu  big1.txt  big_s.txt  check_error.sh  example.c  flow-1000.txt  flow-one.txt  flow-ten.txt  flow_one.txt  leaks.txt  lem-in  newfarm  run5super  run5times  test  vcs.xml
error/: 3_link_line.txt  bad_file.txt  begin_end_same.txt  double_end.txt  double_link.txt  double_start.txt  double_vertex.txt  empty_vertex_name.txt  long_vertex_name.txt  minus_ants.txt  no_ants.txt  no_ants_empty_line.txt  no_edges.txt  no_end.txt  no_path.txt  no_start.txt  same_xy  self_link.txt  shortest_path.txt  space_vertex_name.txt  too_much_ants  unknown_command.txt  vertex_no_x.txt  vertex_no_y.txt  vertex_with_l.txt  vertex_wrong_x.txt  vertex_wrong_y.txt  wrong_ants.txt  wrong_ants2.txt  wrong_link.txt  zero_ants.txt
includes/: lem-in.h  lem_in.h
libft/: CMakeLists.txt  Makefile
libft/includes/: libftprintf.h
libft/libft/: Makefile
libft/libft/includes/: libft.h
libft/libft/src/: ft_lstaddback.c  ft_lstaddhere.c  ft_lstcpy.c  ft_lstdel.c  ft_lstnew.c  ft_matrixalloc.c  ft_num_size.c
libft/src/: form_num_char.c  ft_color_input.c  ft_itoa_double.c  ft_printf_fd.c  printf.c
src/: find_way.c  func.c  func1.c  lem-in.c  main.c  newWay.c  parce.c  runAnts.c  run_ants.c  theWay.c
